--- a/jsconfig.json
+++ b/jsconfig.json
@@ -7,6 +7,13 @@
     "paths": {
       "@/*": [
         "src/*"
+      ],
+      "include": [
+        "src/data/*" 
+      ],
+      "exclude": [
+        "node_modules",
+        "dist" 
       ]
     },
     "lib": [
